<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.dvsa.testing.framework</groupId>
    <artifactId>vol-api-calls</artifactId>
    <version>2.7.2-SNAPSHOT</version>


    <properties>
        <active-support.version>2.5.0</active-support.version>
        <log4j.version>2.22.0</log4j.version>
        <log4j12.version>2.22.0</log4j12.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>
        <uri-constructor.version>2.0.4</uri-constructor.version>
        <apache-http.version>5.3.1</apache-http.version>
        <maven.compiler.version>3.11.0</maven.compiler.version>
        <github.url>https://maven.pkg.github.com/dvsa/vol-api-calls</github.url>
        <aws-java-sdk-s3.version>1.12.610</aws-java-sdk-s3.version>
        <aws-secrets-manager.version>1.12.610</aws-secrets-manager.version>
        <snakeyamal.version>2.2</snakeyamal.version>
        <java.version>17</java.version>
    </properties>

    <profiles>
        <profile>
            <id>github</id>
            <repositories>
                <repository>
                    <id>central</id>
                    <url>https://repo1.maven.org/maven2</url>
                    <releases><enabled>true</enabled></releases>
                    <snapshots><enabled>true</enabled></snapshots>
                </repository>
                <repository>
                    <id>dvsa-github-packages</id>
                    <name>GitHub dvsa Apache Maven Packages</name>
                    <url>https://maven.pkg.github.com/dvsa/*</url>
                    <snapshots><enabled>true</enabled></snapshots>
                    <releases><enabled>true</enabled></releases>
                </repository>
            </repositories>
            <distributionManagement>
                <repository>
                    <id>github-publish</id>
                    <name>GitHub dvsa Apache Maven Packages</name>
                    <url>${github.url}</url>
                    <snapshots><enabled>true</enabled></snapshots>
                    <releases><enabled>true</enabled></releases>
                </repository>
            </distributionManagement>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>

    <build>
        <extensions>
            <extension>
                <groupId>org.springframework.build</groupId>
                <artifactId>aws-maven</artifactId>
                <version>5.0.0.RELEASE</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.dvsa.testing.lib</groupId>
            <artifactId>active-support</artifactId>
            <version>${active-support.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j12.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.dvsa.testing.lib</groupId>
            <artifactId>vol-uri-constructor</artifactId>
            <version>${uri-constructor.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>${apache-http.version}</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyamal.version}</version>
        </dependency>
         <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-secretsmanager</artifactId>
            <version>${aws-secrets-manager.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk</artifactId>
            <version>${aws-java-sdk-s3.version}</version>
        </dependency>
        <dependency>
            <groupId>com.amazon.ion</groupId>
            <artifactId>ion-java</artifactId>
            <version>1.11.9</version>
        </dependency>
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>4.4.0</version>
        </dependency>
    </dependencies>
</project>
